clean up pom.xml, add clojure dep to root deps.edn